# hmi_cram

./: CMakeLists.txt  README.md  hmi-cram.asd  package.xml
src/: auxiliary.lisp  designators.lisp  gesture-calculation.lisp  hmi-cram.lisp  package.lisp  visualizations.lisp  visualizations.lisp~
