<?xml version="1.0"?>
<package>
  <name>hmi_cram</name>
  <version>0.0.0</version>
  <description>The hmi_cram package</description>

  <maintainer email="yazdani@todo.todo">yazdani</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cram_designators</build_depend>
  <run_depend>cram_designators</run_depend>
  <build_depend>cram_location_costmap</build_depend>
  <run_depend>cram_location_costmap</run_depend>
  <build_depend>cram_prolog</build_depend>
  <run_depend>cram_prolog</run_depend>
  <build_depend>cram_commander</build_depend>
  <run_depend>cram_commander</run_depend>
  <build_depend>roslisp</build_depend>
  <run_depend>roslisp</run_depend>
  <build_depend>cl_tf</build_depend>
  <run_depend>cl_tf</run_depend>
  <build_depend>cram_sherpa_spatial_relations</build_depend>
  <run_depend>cram_sherpa_spatial_relations</run_depend>
  <build_depend>hmi_interpreter</build_depend>
  <run_depend>hmi_interpreter</run_depend>
  <build_depend>alexandria</build_depend>
  <run_depend>alexandria</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

</package>
